--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,7 @@ h1 {
 }
 
 h2 {
-  font-size: 25px;
+  font-size: 22px;
 }
 
 h3 {
@@ -377,7 +377,7 @@ button {
 
 .overly:before {
   content: '';
-  background: rgba(0, 0, 0, 0.51);
+  background: rgba(0, 0, 0, 0);
   position: absolute;
   top: 0;
   left: 0;
@@ -433,6 +433,17 @@ button {
   display: inline-block;
   padding: 15px 30px;
   border-radius: 4px;
+}
+
+.btn-primary{
+  background: rgba(9, 58, 101);
+  color: #fff;
+  border-color: #fff;
+}
+.btn-primary:hover {
+  background: rgba(4.3, 22.7, 40);
+  color: #fff;
+  border-color: #fff;
 }
 
 .btn-main, .btn-main-sm {
@@ -635,7 +646,7 @@ ul.pagination .active a {
 }
 
 .bg-1 {
-  background: url("../images/home/hero.jpg");
+  background: linear-gradient(to bottom, rgba(255,255,255,0) 50%, rgba(255,255,255,1) 100%), url("../images/home/hero.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -654,6 +665,12 @@ ul.pagination .active a {
 
 .bg-4 {
   background: #5672f9;
+}
+
+.bg-home {
+  background: linear-gradient(to bottom, rgba(2,0,36,0) 0%, rgba(255,255,255,1) 40%, rgba(255,255,255,1) 100%), url("../images/home/hero.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .navigation {
