--- a/resources/views/classimax/css/style.css
+++ b/resources/views/classimax/css/style.css
@@ -27,7 +27,7 @@ h1 {
 }
 
 h2 {
-  font-size: 25px;
+  font-size: 35px;
 }
 
 h3 {
@@ -638,6 +638,7 @@ ul.pagination .active a {
   background: url("../images/home/hero.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,1));
 }
 
 .bg-2 {
