--- a/public/css/style.css
+++ b/public/css/style.css
@@ -652,7 +652,7 @@ ul.pagination .active a {
 }
 
 .bg-2 {
-  background: url(../images/subscription/subscription-back.jpg);
+  background: linear-gradient(to bottom, rgba(9,58,102,0.25) 0%, rgba(255,255,255,0.25) 100%), url("../images/home/hero.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
